@@ -1,11 +1,11 @@
 Notes	KEYWORD1
 speakerSetup	KEYWORD2
 toneLEDSetup	KEYWORD2
+toneLEDState	KEYWORD2
 blinkLED	KEYWORD2
-beatLEDFunction	KEYWORD2
-beatLEDFunctionFour	KEYWORD2
-noToneDelay	KEYWORD2
 note	KEYWORD2
+ON	LITERAL1
+OFF	LITERAL1
 NOTE_B0	LITERAL1
 NOTE_C1	LITERAL1
 NOTE_CS1	LITERAL1
